fix nav alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -300,8 +300,9 @@ nav.header-nav {
 
   height: 7.25rem;
 
+  padding-inline: 3rem;
   .nav-box {
-    justify-self: flex-start;
+    justify-self: flex-end;
   }
 }
 
